--- a/src/index.css
+++ b/src/index.css
@@ -100,11 +100,8 @@ ul {
 
 .banner-img {
   display: block;
-  /* justify-content: center; */
   line-height: 0;
   max-width: 100%;
-  height: 300px;
-  object-fit: cover;
 }
 
 /* work content */
@@ -160,18 +157,22 @@ ul {
   padding: 15px 0px;
 }
 
-  /* masonry */
-  .column-children {
-    margin-bottom: 22px;
-    border: solid;
-    border-width: thin;
-  }
+.series-process {
+  margin-bottom: 8px;
+}
 
-  .extras-img-wrapper img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+/* masonry */
+.column-children {
+  margin-bottom: 22px;
+  border: solid;
+  border-width: thin;
+}
+
+.extras-img-wrapper img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 /* gallery */
 .layout-gallery {
@@ -575,11 +576,8 @@ input[type="submit"]:hover {
 
   .banner-img {
     display: block;
-    /* justify-content: center; */
     line-height: 0;
     max-width: 100%;
-    height: auto;
-    object-fit: cover;
   }
 
   /* work content */
@@ -633,6 +631,10 @@ input[type="submit"]:hover {
     text-align: right;
     font-size: 27px;
     padding: 30px 0px;
+  }
+
+  .series-process {
+    margin-bottom: 15px;
   }
 
   /* masonry */
@@ -1003,7 +1005,7 @@ input[type="submit"]:hover {
   /* navbar */
   .navbar-container {
     background: rgb(255, 255, 255);
-
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1034,6 +1036,7 @@ input[type="submit"]:hover {
   }
 
   .brand-logo-img {
+    animation-delay: 5s;
     max-width: 205px;
   }
 
@@ -1107,6 +1110,10 @@ input[type="submit"]:hover {
     text-align: right;
     font-size: 27px;
     padding: 30px 0px;
+  }
+
+  .series-process {
+    margin-bottom: 15px;
   }
 
   /* masonry */
