--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ ul {
   max-width: 135px;
 }
 
-.selected {
+.active {
   font-family: "brandon grotesque black";
 }
 
@@ -562,7 +562,7 @@ input[type="submit"]:hover {
     max-width: 180px;
   }
 
-  .selected {
+  .active {
     font-family: "brandon grotesque black";
   }
 
@@ -1040,7 +1040,7 @@ input[type="submit"]:hover {
     max-width: 205px;
   }
 
-  .selected {
+  .active {
     font-family: "brandon grotesque black";
   }
 
