style: updated px units to rem :lipstick:

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,10 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 ul {
   list-style: none;
   padding: 0;
@@ -29,7 +33,7 @@ ul {
   display: flex;
   justify-content: left;
   align-items: center;
-  padding: 20px 0;
+  padding: 2rem 0;
 }
 
 .default-nav ul,
@@ -38,28 +42,28 @@ ul {
 }
 
 .default-nav-links {
-  font-size: 19px;
+  font-size: 1.9rem;
   text-decoration: none;
 }
 
 li:not(:last-child) .default-nav-links {
-  margin-right: 22px;
+  margin-right: 2.2rem;
 }
 
 li:not(:first-child) .social-nav-links {
-  margin-left: 22px;
+  margin-left: 2.2rem;
 }
 
 .social-nav li img {
-  max-width: 20px;
+  max-width: 2rem;
 }
 
 .brand-logo {
-  margin: 0 10px;
+  margin: 0 1rem;
 }
 
 .brand-logo-img {
-  max-width: 135px;
+  max-width: 13.5rem;
 }
 
 .active {
@@ -67,15 +71,15 @@ li:not(:first-child) .social-nav-links {
 }
 
 .hamburger-menu-img {
-  max-width: 52px;
+  max-width: 5.2rem;
   margin-left: auto;
-  margin-right: 15px;
+  margin-right: 1.5rem;
   cursor: pointer;
 }
 
 .mobile-nav {
   position: fixed;
-  padding: 40px;
+  padding: 4rem;
   width: 100vw;
   height: 100vh;
   top: 0;
@@ -85,28 +89,28 @@ li:not(:first-child) .social-nav-links {
 
 .mobile-nav-links {
   display: inline-block;
-  font-size: 19px;
-  margin-left: 5px;
-  margin-top: 5px;
+  font-size: 1.9rem;
+  margin-left: 0.5rem;
+  margin-top: 0.5rem;
   text-decoration: none;
   color: rgb(255, 255, 255);
 }
 
 .mobile-nav-cancel-img {
-  max-width: 52px;
-  margin-bottom: 25px;
+  max-width: 5.2rem;
+  margin-bottom: 2.5rem;
   padding: 0;
   cursor: pointer;
 }
 
 .mobile-social-nav ul {
-  margin-top: 30px;
+  margin-top: 3rem;
   display: flex;
 }
 
 .mobile-social-nav li img {
-  margin-right: 20px;
-  max-width: 25px;
+  margin-right: 2rem;
+  max-width: 2.5rem;
 }
 
 .banner-img {
@@ -117,13 +121,13 @@ li:not(:first-child) .social-nav-links {
 
 /* work content */
 .work-container {
-  padding: 0 20px;
-  margin-bottom: 0px;
+  padding: 0 2rem;
+  margin-bottom: 0;
 }
 
 .work-tabs {
-  font-size: 19px;
-  padding: 32px 32px;
+  font-size: 1.9rem;
+  padding: 3.2rem;
 }
 
 .work-tabs ul {
@@ -133,7 +137,7 @@ li:not(:first-child) .social-nav-links {
 }
 
 .work-tabs.work_tabs_no-padding {
-  padding-bottom: 15px;
+  padding-bottom: 1.5rem;
 }
 
 /* series and comics heading */
@@ -141,30 +145,30 @@ li:not(:first-child) .social-nav-links {
 .individual-comics-title,
 .episode-series-title {
   font-family: "brandon grotesque black";
-  font-size: 35px;
+  font-size: 3.5rem;
   text-align: center;
-  padding-bottom: 20px;
+  padding-bottom: 2rem;
 }
 
 /* series and comics project layout */
 .series-synopsis, .comics-synopsis {
-  font-size: 15px;
+  font-size: 1.5rem;
 }
 
 .episodes-heading, .extras-heading, .vignettes-heading {
-  font-size: 20px;
-  padding: 15px 0px;
+  font-size: 2rem;
+  padding: 15rem 0;
 }
 
 .series-process {
-  margin-bottom: 8px;
+  margin-bottom: 0.8rem;
 }
 
 /* gallery */
 .layout-gallery {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
-  gap: 20px;
+  gap: 2rem;
 }
 
 .gallery-tile-img {
@@ -186,7 +190,7 @@ li:not(:first-child) .social-nav-links {
 
 .title-heading {
   font-family: "brandon grotesque black";
-  font-size: 27px;
+  font-size: 2.7rem;
   position: relative;
   text-align: center;
   opacity: 0;
@@ -196,7 +200,7 @@ li:not(:first-child) .social-nav-links {
 }
 
 .click-to-see {
-  font-size: 18px;
+  font-size: 1.8rem;
   position: relative;
   text-align: center;
   opacity: 0;
@@ -206,7 +210,7 @@ li:not(:first-child) .social-nav-links {
 }
 
 .tile-title {
-  margin-top: 15px;
+  margin-top: 1.5rem;
   text-align: center;
 }
 
@@ -259,14 +263,14 @@ li:not(:first-child) .social-nav-links {
 }
 
 .playing-info {
-  font-size: 15px;
-  padding: 10px 0px 20px 0px;
+  font-size: 1.5rem;
+  padding: 1rem 0 2rem 0;
 }
 
 .button {
-  width: 15px;
-  height: 15px;
-  margin-right: 8px;
+  width: 1.5rem;
+  height: 1.5rem;
+  margin-right: 0.8rem;
 
 }
 
@@ -280,8 +284,8 @@ li:not(:first-child) .social-nav-links {
 }
 
 .episode-video-title {
-  margin-left: 10px;
-  font-size: 15px;
+  margin-left: 1rem;
+  font-size: 1.5rem;
 }
 
 .play-button {
@@ -299,8 +303,8 @@ li:not(:first-child) .social-nav-links {
 }
 
 .footer-container {
-  margin-top: 50px;
-  padding: 50px 32px;
+  margin-top: 5rem;
+  padding: 5rem 3.2rem;
 }
 
 .footer-container .social-nav ul {
@@ -309,22 +313,22 @@ li:not(:first-child) .social-nav-links {
 }
 
 .footer-container .social-nav-links {
-  margin: 0 10px;
+  margin: 0 1rem;
 }
 
 .copyright {
-  font-size: 20px;
-  margin-top: 20px;
+  font-size: 2rem;
+  margin-top: 2rem;
   text-align: center;
 }
 
 /* About Page ---------------- */
 .about-container {
-  padding: 0 20px;
+  padding: 0 2rem;
   display: grid;
   grid-template-columns: 1fr;
-  gap: 20px;
-  margin: 10px 0 50px 0px;
+  gap: 2rem;
+  margin: 1rem 0 5rem 0;
 }
 
 .about-img {
@@ -341,73 +345,73 @@ li:not(:first-child) .social-nav-links {
   font-family: "brandon grotesque black";
   color: #fff;
   text-align: center;
-  font-size: 30px;
+  font-size: 3rem;
   background: #37383b;
 }
 
 .about-content {
   border: solid;
   border-width: thin;
-  font-size: 16px;
+  font-size: 1.6rem;
   background: #f4f4f4;
 }
 
 .about-content p {
-  padding: 20px;
+  padding: 2rem;
 }
 
 /* Contact Page ---------------- */
 .contact-container {
-  padding: 0 20px;
-  margin-bottom: 50px;
+  padding: 0 2rem;
+  margin-bottom: 5rem;
 }
 
 .lets-get-creative-heading {
-  font-size: 40px;
-  padding: 10px 0 35px 0;
+  font-size: 4rem;
+  padding: 1rem 0 3.5rem 0;
   text-align: center;
 }
 
 .client-message {
   display: block;
-  margin: 0 0 18px 0;
-  font-size: 20px;
+  margin: 0 0 1.8rem 0;
+  font-size: 2rem;
   text-align: center;
 }
 
 .email-address {
   font-family: "brandon grotesque black";
-  font-size: 25px;
+  font-size: 2.5rem;
   text-align: center;
-  padding: 20px 0px;
+  padding: 2rem 0;
   background-color: #37383B;    
   color: #fff;
 }
 
 .humour-message {
   text-align: center;
-  font-size: 14px;
-  margin-top: 18px;
+  font-size: 1.4rem;
+  margin-top: 1.8rem;
 }
 
 label {
   display: block;
-  margin: 0 0 12px 0;
-  font-size: 18px;
+  margin: 0 0 1.2rem 0;
+  font-size: 1.8rem;
 }
 
 .name-label {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 10px;
+  gap: 1rem;
 }
 
 input[type="text"],
 textarea {
   width: 100%;
-  font-size: 20px;
-  padding: 2px 15px;
-  margin-top: 4px;
+  font-size: 2rem;
+  padding: 0.2rem 1.5rem;
+  margin-top: 0.4rem;
   border: solid;
   border-width: thin;
   background: #f4f4f4;
@@ -415,17 +419,17 @@ textarea {
 }
 
 .message-box {
-  height: 160px;
+  height: 16rem;
 }
 
 .info-source-box {
-  height: 120px;
+  height: 12rem;
 }
 
 input[type="submit"] {
-  font-size: 15px;
-  padding: 6px 15px;
-  margin-top: 10px;
+  font-size: 1.5rem;
+  padding: 0.6rem 1.5rem;
+  margin-top: 1rem;
   text-align: center;
   border: solid;
   border-width: thin;
@@ -440,8 +444,8 @@ input[type="submit"]:hover {
 }
 
 .name-lower-labels {
-  font-size: 10px;
-  margin-top: 2px;
+  font-size: 1rem;
+  margin-top: 0.2rem;
 }
 
 /* cursor type handling */
@@ -453,7 +457,7 @@ input[type="submit"]:hover {
 
 /* Scrollbar------------------------ */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 1rem;
 }
 
 /* Track */
@@ -483,11 +487,11 @@ input[type="submit"]:hover {
   }
 
   .brand-logo {
-    margin: 0 50px;
+    margin: 0 5rem;
   }
 
   .brand-logo-img {
-    max-width: 180px;
+    max-width: 18rem;
   }
 
   .hamburger-menu-img {
@@ -500,35 +504,35 @@ input[type="submit"]:hover {
 
   /* work content */
   .work-container {
-    padding: 0 32px;
+    padding: 0 3.2rem;
   }
 
   /* series and comics heading */
   .individual-series-title,
   .individual-comics-title,
   .episode-series-title {
-    font-size: 51px;
+    font-size: 5.1rem;
   }
 
   /* series and comics project layout */
   .series-synopsis, .comics-synopsis {
-    font-size: 20px;
+    font-size: 2rem;
   }
 
   .episodes-heading, .extras-heading, .vignettes-heading {
     font-family: "brandon grotesque black";
     text-align: right;
-    font-size: 27px;
-    padding: 30px 0px;
+    font-size: 2.7rem;
+    padding: 3rem 0;
   }
 
   .series-process {
-    margin-bottom: 15px;
+    margin-bottom: 1.5rem;
   }
 
   /* gallery */
   .layout-gallery {
-    gap: 22px;
+    gap: 2.2rem;
   }
 
   .title-heading {
@@ -546,115 +550,115 @@ input[type="submit"]:hover {
 
   .episode-video-container {
     text-align: left;
-    margin-bottom: 30px;
+    margin-bottom: 3rem;
   }
 
   .playing-info {
-    font-size: 19px;
+    font-size: 1.9rem;
     display: flex;
     align-items: center;
-    padding: 15px 0 0 0;
+    padding: 1.5rem 0 0 0;
   }
 
   .button {
-    width: 20px;
-    height: 20px;
+    width: 2rem;
+    height: 2rem;
   }
   
   .episode-video-title {
-    font-size: 19px;
+    font-size: 1.9rem;
   }
 
   /* footer */
   .footer-container {
-    margin-top: 75px;
-    padding: 50px 240px;
+    margin-top: 7.5rem;
+    padding: 5rem 24rem;
   }
   
   .footer-container .social-nav-links {
-    margin: 0 20px;
+    margin: 0 2rem;
   }
 
   /* About Page ---------------- */
   .about-container {
-    padding: 0 32px;
+    padding: 0 3.2rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 32px;
-    margin: 30px 0px 100px 0px;
+    gap: 3.2rem;
+    margin: 3rem 0 10rem 0;
   }
 
   .its-me-heading {
-    font-size: 75px;
+    font-size: 7.5rem;
   }
 
   .about-content {
-    font-size: 27px;
+    font-size: 2.7rem;
   }
 
   .about-content p {
-    padding: 60px;
+    padding: 6rem;
   }
 
   /* Contact Page ---------------- */
   .contact-container {
-    padding: 0 120px;
-    margin-bottom: 75px;
+    padding: 0 12rem;
+    margin-bottom: 7.5rem;
   }
 
   .lets-get-creative-heading {
-    font-size: 60px;
-    padding: 45px 0 65px 0;
+    font-size: 6rem;
+    padding: 4.5rem 0 6.5rem 0;
   }
 
   .client-message {
-    font-size: 24px;
+    font-size: 2.4rem;
   }
 
   .email-address {
-    font-size: 40px;
+    font-size: 4rem;
   }
 
   label {
-    margin: 0 0 18px 0;
-    font-size: 24px;
+    margin: 0 0 1.8rem 0;
+    font-size: 2.4rem;
   }
 
   input[type="text"],
   textarea {
-    padding: 8px 15px;
-    margin-top: 8px;
+    padding: 0.8rem 1.5rem;
+    margin-top: 0.8rem;
   }
 
   input[type="submit"] {
-    font-size: 20px;
-    padding: 8px 30px;
+    font-size: 2rem;
+    padding: 0.8rem 3rem;
   }
 
   .name-lower-labels {
-    font-size: 14px;
+    font-size: 1.4rem;
   }
 }
 
 @media only screen and (min-width: 1050px) {
   /* navbar */
   .brand-logo {
-    margin: 0 130px;
+    margin: 0 13rem;
   }
 
   .brand-logo-img {
     animation-delay: 5s;
-    max-width: 205px;
+    max-width: 20.5rem;
   }
 
   /* work content */
   .work-container {
-    padding: 0 240px;
+    padding: 0 24rem;
   }
 
   .work-tabs {
-    font-size: 19px;
-    padding: 32px 0px;    
+    font-size: 1.9rem;
+    padding: 3.2rem 0;    
   }
 
   .work-tabs ul {
@@ -674,7 +678,7 @@ input[type="submit"]:hover {
 
   /* series and comics project layout */
   .series-synopsis, .comics-synopsis {
-    font-size: 22px;
+    font-size: 2.2rem;
   }
 
   /* gallery */
@@ -694,7 +698,7 @@ input[type="submit"]:hover {
 
   .episode-video-container {
     text-align: left;
-    margin-bottom: 30px;
+    margin-bottom: 3rem;
   }
 
   /* footer */
@@ -706,22 +710,22 @@ input[type="submit"]:hover {
 
   /* About Page ---------------- */
   .about-container {
-    padding: 0 128px;
-    gap: 42px;
-    margin: 40px 0px 100px 0px;
+    padding: 0 12.8rem;
+    gap: 4.2rem;
+    margin: 4rem 0 10rem 0;
   }
 
   /* Contact Page ---------------- */
   .contact-container {
-    padding: 0 240px;
+    padding: 0 24rem;
   }
 
   .lets-get-creative-heading {
-    font-size: 76px;
+    font-size: 7.6rem;
   }
 
   .email-address {
-    font-size: 51px;
-    padding: 30px 0;
+    font-size: 5.1rem;
+    padding: 3rem 0;
   }
 }
